Fix new overview text on mobile size

--- a/CSS/mySite.css
+++ b/CSS/mySite.css
@@ -1204,3 +1204,10 @@ section {
     }
 
 }
+
+@media screen and (max-width: 1000px) {
+    #elevator-pitch li {
+        font-size: 3.4vw;
+        margin-bottom: 1em;
+    }
+}
